# 2026-Accommodation

./: README.md  pyproject.toml  requirements.txt
accommodation/: main.py
accommodation/datasets/tabular/: sctp.py
accommodation/datasets/text/: agnews.py  build_vocab.py  imdb.py  yelp_reviews.py
accommodation/datasets/vision/: cifar10.py  fashion_mnist.py  mnist.py
accommodation/experiments/classifiers/: cifar_accommodation_classifier.py  cifar_linear_classifier.py  gru_accommodation_classifier.py  gru_linear_classifier.py  mlp_accommodation_classifier.py  mlp_linear_classifier.py  mnist_accommodation_classifier.py  mnist_linear_classifier.py
accommodation/experiments/experiments/accommodation/: agnews.py  cifar.py  fmnist.py  imdb.py  mnist.py  sctp.py  yelp.py
accommodation/experiments/experiments/linear/: agnews.py  cifar.py  fmnist.py  imdb.py  mnist.py  sctp.py  yelp.py
accommodation/experiments/helpers/: _utils.py  format_utils.py  load_utils.py  model_perturbator.py  pool.py  result_serializer.py  results_accessor.py
accommodation/experiments/runners/accommodation/: image_model_runner.py  tabular_model_runner.py  text_model_runner.py
accommodation/experiments/runners/linear/: image_model_runner.py  tabular_model_runner.py  text_model_runner.py
accommodation/model/: accommodation_layer.py  accommodation_loss.py  compatibility_operator.py  field.py  set_seed.py
accommodation/model/policies/: bayes.py  likelihood.py
